--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,3 @@
-.home {
-}
-
 .image-with-text-overlay {
   position: relative;
   width: 100%;
@@ -24,17 +21,16 @@
 
 .banner {
   background-color: #f2f2f2;
-  padding: 20px;
-  margin-top: 20px; /* Add some margin to separate it from the image */
-  text-align: center; /* Center-align the content */
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add a shadow for better visibility */
+  padding: 80px;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .banner h2 {
-  font-size: 24px; /* Adjust font size as needed */
+  font-size: 24px;
   font-weight: bold;
 }
 
 .banner p {
-  margin-bottom: 10px; /* Add some margin between paragraphs */
+  margin: 20px;
 }
