--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,10 +1,9 @@
-/* Footer.css */
-
 .footer {
-  background-color: #333;
+  background-color: #292323;
   color: #fff;
   padding: 20px 0;
   width: 100%;
+  height: 300px;
 }
 
 .footer-container {
@@ -35,5 +34,5 @@
 }
 
 .empty-middle {
-  flex-grow: 1; /* Fill the empty space in the middle */
+  flex-grow: 1;
 }
