--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,14 +1,14 @@
 .image-with-text-overlay {
   position: relative;
   width: 100%;
-  height: 300px; /* Adjust height as needed */
+  height: 450px;
 }
 
 .background-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.7; /* Adjust opacity as needed */
+  opacity: 0.7;
 }
 
 .text-overlay {
@@ -20,6 +20,16 @@
 }
 
 .banner {
+  background-color: #272727;
+  padding: 80px;
+  color: white;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  height: 350px;
+  border-bottom: 2px solid #daca23;
+}
+
+.banner-2 {
   background-color: #f2f2f2;
   padding: 80px;
   text-align: center;
@@ -33,4 +43,15 @@
 
 .banner p {
   margin: 20px;
+  margin-bottom: 40px;
+}
+
+.home-btn {
+  background-color: #daca23 !important;
+  margin-top: 20px;
+}
+
+.icon-image {
+  height: 100px;
+  width: 100px;
 }
