--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,10 +1,12 @@
 .navbar {
   background-color: #f5f5f5;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 3px solid #4f3838;
   padding: 10px 20px;
 }
 
 .navbar-container {
+  margin-left: 5px;
+  margin-right: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,13 +17,14 @@
 }
 
 .logo-image {
-  width: 100px;
+  width: 300px;
   height: auto;
 }
 
 .navbar-links {
   display: flex;
   align-items: center;
+  margin-right: 150px;
 }
 
 .nav-link {
@@ -29,18 +32,4 @@
   text-decoration: none;
   color: #333333;
   font-weight: bold;
-}
-
-.linkedin-button {
-  padding: 8px 16px;
-  background-color: #6d4c41;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.linkedin-button:hover {
-  background-color: #5d4037;
 }
