--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,36 +3,75 @@
   color: #fff;
   padding: 20px 0;
   width: 100%;
-  height: 300px;
+  position: relative;
+  height: 250px;
 }
 
 .footer-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 20px;
+  border-top: 2px solid #3a3a3a ;
 }
 
 .contact-info p,
-.back-to-top a {
+.menu-info p,
+.back-to-top {
   margin: 5px 0;
-}
-
-.contact-info p {
   font-size: 14px;
 }
 
-.back-to-top a {
-  font-size: 14px;
+.contact-info p:first-child,
+.menu-info p:first-child {
+  font-weight: bold;
+}
+
+.back-to-top {
+  display: inline-block;
+  margin-bottom: 10px;
   text-decoration: none;
   color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-transform: uppercase;
 }
 
-.back-to-top a:hover {
+.back-to-top:hover {
   text-decoration: underline;
 }
 
-.empty-middle {
-  flex-grow: 1;
+.footer h2 {
+  margin: 5px 0;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.footer-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #3a3a3a;
+  color: #b0b0b0;
+  padding: 10px 0;
+  font-size: 12px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+
+.menu-info {
+  margin-right: 120px;
+}
+
+.decorative-icons {
+  margin-left: 5px;
 }
