--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,5 +1,12 @@
 .card-container {
   display: flex;
-  gap: 20px;
-  margin: 60px;
+  padding: 100px;
+  justify-content: center;
+  background-color: rgb(47 43 37);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.trainning-card {
+  background-color: #d3d037 !important;
 }
