--- a/src/Components/Home/HomeCard.css
+++ b/src/Components/Home/HomeCard.css
@@ -1,5 +1,7 @@
 .home-card {
-  width: 800px !important;
+  max-width: 450px !important;
   height: 600px !important;
-  padding: 10px;
+  padding: 20px;
+  border-radius: 0 !important;
+  background-color: rgb(161, 151, 151);
 }
