advances in about me tab

--- a/src/Components/Carrosel/CarouselPhotos.css
+++ b/src/Components/Carrosel/CarouselPhotos.css
@@ -1,3 +1,40 @@
 .carousel-photos-tab {
+  width: 100%;
   height: 500px;
+  position: relative;
+}
+
+.carousel-item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.carousel-text {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+  z-index: 10;
+  white-space: nowrap;
+  margin-bottom: 80vh;
 }
