my work tab changes

--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -25,15 +25,14 @@
 
 .home-card {
   width: 100%;
+  max-width: 100% !important;
+  height: 300px !important;
+  margin-bottom: 5px;
 }
 
 .my-work-card-container {
   width: 100%;
   margin-bottom: 20px; /* Add spacing between cards */
-}
-
-.my-work-card {
-  width: 100%;
 }
 
 .my-work-tab .banner {
