--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -14,9 +14,19 @@
 .text-overlay {
   position: absolute;
   top: 50%;
-  left: 20%;
+  left: 12%;
   transform: translate(-50%, -50%);
-  color: white; /* Text color */
+  color: white;
+}
+
+.text-overlay h2 {
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  border-bottom: 3px solid transparent;
+  transition: border-color 0.3s ease;
+  border-bottom-color: yellow;
 }
 
 .banner {
@@ -29,11 +39,14 @@
   border-bottom: 2px solid #daca23;
 }
 
-.banner-2 {
+.banner-technologies {
   background-color: #f2f2f2;
   padding: 80px;
-  text-align: center;
+  height: 350px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .banner h2 {
@@ -51,7 +64,16 @@
   margin-top: 20px;
 }
 
+.home-btn:hover {
+  background-color: rgb(187, 187, 76) !important;
+}
+
 .icon-image {
   height: 100px;
   width: auto;
+  transition: transform 0.3s ease;
+}
+
+.icon-image:hover {
+  transform: scale(1.3);
 }
