adding animation libreary

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -86,3 +86,8 @@
 .icon-image:hover {
   transform: scale(1.3);
 }
+
+.hidden {
+  transform: translateY(-10%);
+  transition: transform 0.5s ease-in-out;
+}
