--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #f5f5f5;
-  border-bottom: 3px solid #4f3838;
+  /* border-bottom: 3px solid #4f3838; */
   padding: 10px 20px;
   transition: transform 0.8s ease;
 }
