--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,12 +1,30 @@
+* {
+  font-family: "Lato", "Roboto", sans-serif !important;
+}
+
+.about-me-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px;
+  padding-top: 60px;
+  background-color: rgb(156 211 188 / 69%);
+}
+
+.about-me-title {
+  text-align: center;
+  margin-bottom: 50px;
+  color: white;
+  border-bottom: solid 2px yellow;
+}
+
 .card-container {
   display: flex;
-  padding: 100px;
   justify-content: center;
-  background-color: rgb(47 43 37);
-  margin-top: 20px;
-  margin-bottom: 20px;
+  gap: 30px;
 }
 
 .trainning-card {
-  background-color: #d3d037 !important;
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
