--- a/src/Components/Carrosel/CarouselPhotos.css
+++ b/src/Components/Carrosel/CarouselPhotos.css
@@ -1,6 +1,6 @@
 .carousel-photos-tab {
   width: 100%;
-  height: 500px;
+  height: 100vh; 
   position: relative;
 }
 
@@ -21,9 +21,11 @@
 
 .carousel-image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
   display: block;
+  margin: 0 auto; 
+  object-fit: cover; 
+  object-position: center;
 }
 
 .carousel-text {
