--- a/src/Components/Home/HomeCard.css
+++ b/src/Components/Home/HomeCard.css
@@ -1,7 +1,41 @@
 .home-card-about-me {
   max-width: 450px !important;
-  height: 600px !important;
   padding: 20px;
-  border-radius: 0 !important;
-  background-color: rgb(161, 151, 151);
+  border-radius: 2 !important;
+  background-color: rgb(241, 228, 228);
+  font-family: "Lato", "Roboto", sans-serif !important;
+  width: 30vw;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 5px !important;
+  transition: transform 0.15s ease, scale 0.3s ease;
+}
+
+.home-card-about-me .MuiCardActionArea {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.home-card-about-me .MuiCardContent {
+  flex-grow: 1;
+  padding: 16px;
+}
+
+.home-card-about-me .MuiCardMedia {
+  height: 150px;
+  object-fit: cover;
+}
+
+.home-card-about-me .MuiTypography {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.home-card-about-me:hover {
+  transform: scale(1.05);
 }
