--- a/src/Components/MyWork/TextCard.css
+++ b/src/Components/MyWork/TextCard.css
@@ -1,19 +1,31 @@
+* {
+  font-family: "Lato", "Roboto", sans-serif !important;
+}
+
 .card {
-  width: calc(25% - 20px);
+  width: 300px;
   padding: 10px;
   box-sizing: border-box;
   text-align: center;
   display: inline-block;
   vertical-align: top;
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
 
 .card-icon {
-  font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .card-title {
   font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.card-text {
   font-size: 12px;
-  margin-bottom: 5px;
 }
