--- a/src/Components/Home/HomeCard.css
+++ b/src/Components/Home/HomeCard.css
@@ -3,7 +3,7 @@
   padding: 20px;
   border-radius: 2 !important;
   background-color: rgb(241, 228, 228);
-  font-family: "Lato", "Roboto", sans-serif !important;
+  font-family: "DM Sans", sans-serif !important;
   width: 30vw;
   height: 600px;
   display: flex;
