--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,6 +1,6 @@
 .primary-button {
   padding: 8px 16px;
-  background-color: #6d4c41;
+  background-color: #393939;;
   color: white;
   border: none;
   border-radius: 4px;
@@ -9,5 +9,5 @@
 }
 
 .primary-button:hover {
-  background-color: #5d4037;
+  background-color: #0a0909;
 }
