--- a/src/Components/Home/HomeCard.css
+++ b/src/Components/Home/HomeCard.css
@@ -2,7 +2,7 @@
   max-width: 450px !important;
   padding: 20px;
   border-radius: 2 !important;
-  background-color: rgb(241, 228, 228);
+  background-color:#f5f2f2f2 !important;
   font-family: "DM Sans", sans-serif !important;
   width: 30vw;
   height: 600px;
@@ -38,4 +38,9 @@
 
 .home-card-about-me:hover {
   transform: scale(1.05);
+}
+
+.no-bullets {
+  list-style-type: none;
+  padding-left: 0;
 }
