--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,6 +2,12 @@
   position: relative;
   width: 100%;
   height: 450px;
+  overflow: hidden;
+  transition: transform 0.5s ease;
+}
+
+.image-with-text-overlay:hover {
+  transform: scale(1.1);
 }
 
 .background-image {
@@ -21,7 +27,7 @@
 
 .text-overlay h2 {
   color: white;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 20px;
   border-bottom: 3px solid transparent;
@@ -44,7 +50,7 @@
   color: white;
   text-align: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  height:400px;
+  height: 400px;
   border-bottom: 2px solid #daca23;
 }
 
