--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -11,6 +11,7 @@
   background-image: url("background-about-me.jpg");
   background-size: cover;
   background-position: center;
+  height: 900px;
 }
 
 .about-me-title {
@@ -28,4 +29,24 @@
 .trainning-card {
   transform: scale(1.05);
   transition: transform 0.3s ease;
+}
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-image: url("background-about-me.jpg");
+  padding-bottom:60px
+
+}
+
+.image-container > * {
+  flex: 1 1 33%;
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .image-container > * {
+    flex: 1 1 100%;
+  }
 }
