--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -1,9 +1,12 @@
+.my-work-tab {
+  overflow: hidden;
+}
 .my-work-tab .banner {
   background-color: rgb(54, 51, 51);
   color: #fff;
   text-align: center;
   padding: 50px 0;
-  background-image: url("../MyWork/my-work-2.jpg");
+  background-image: url("../MyWork/background-cover.jpeg");
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -14,6 +17,11 @@
   opacity: 0.8;
   height: 200px;
   border-bottom: none;
+  transition: transform 0.5 ease;
+}
+
+.my-work-tab .banner:hover {
+  transform: scale(1.02);
 }
 
 .my-work-tab .banner h2 {
@@ -27,17 +35,27 @@
   padding: 30px;
   padding-bottom: 50px;
   background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 10px;
+  align-items: center;
 }
 
 .my-work-tab .knowledge-cards {
-  background-image: linear-gradient(to bottom, rgba(130, 171, 154, 0.69), rgba(130, 171, 154, 1));
+  background: #332d2d;
+  color: white;
   padding: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.home-card-container {
+/* .home-card-container {
   display: grid;
   gap: 20px;
-}
+} */
 
 .home-card {
   width: 100%;
