--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -6,12 +6,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 150px;
+  /* padding: 150px; */
   padding-top: 80px;
   background-image: url("background-about-me.jpg");
   background-size: cover;
   background-position: center;
-  height: 900px;
+  height: 170px;
 }
 
 .about-me-title {
@@ -23,7 +23,11 @@
 .card-container {
   display: flex;
   justify-content: center;
+  padding-top: 50px;
+  height: 700px;
   gap: 30px;
+  background: #272727;
+  opacity: 1;
 }
 
 .trainning-card {
@@ -36,8 +40,7 @@
   flex-wrap: wrap;
   width: 100%;
   background-image: url("background-about-me.jpg");
-  padding-bottom:60px
-
+  padding-bottom: 60px;
 }
 
 .image-container > * {
