--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -6,7 +6,7 @@
   color: #fff;
   text-align: center;
   padding: 50px 0;
-  background-image: url("../MyWork/background-cover.jpeg");
+  background-image: url("../MyWork/background2.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -17,11 +17,6 @@
   opacity: 0.8;
   height: 200px;
   border-bottom: none;
-  transition: transform 0.5 ease;
-}
-
-.my-work-tab .banner:hover {
-  transform: scale(1.02);
 }
 
 .my-work-tab .banner h2 {
@@ -52,10 +47,6 @@
   align-items: center;
 }
 
-/* .home-card-container {
-  display: grid;
-  gap: 20px;
-} */
 
 .home-card {
   width: 100%;
