alternative about me

--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -48,6 +48,16 @@
   box-sizing: border-box;
 }
 
+.about-me-cards-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  gap: 30px;
+  background-color: #e5e5e5;
+}
+
 @media (max-width: 768px) {
   .image-container > * {
     flex: 1 1 100%;
