working on responsive

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -83,3 +83,16 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+@media screen and (max-width: 834px) and (max-height: 1022px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+
+  .footer {
+    height: 400px;
+    width: 100%;
+  }
+}
