--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -116,3 +116,26 @@
   border-bottom: 1px solid rgb(150, 150, 18);
   line-height: 1;
 }
+
+@media screen and (max-width: 834px) and (max-height: 1022px) {
+  .text-overlay h2 {
+    color: white;
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    border-bottom: 3px solid transparent;
+    transition: border-color 0.3s ease;
+    border-bottom-color: none;
+  }
+
+  .banner {
+    height: 600px;
+    overflow: hidden;
+  }
+
+  .banner-technologies {
+    height: 600px;
+    overflow: hidden;
+  }
+  
+}
