--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -64,4 +64,9 @@
     height: 2000px;
     flex-direction: column;
   }
+
+  .my-work-tab .knowledge-cards {
+    flex-direction: column;
+    gap: 15px;
+  }
 }
