--- a/src/Components/Home/HomeCard.css
+++ b/src/Components/Home/HomeCard.css
@@ -50,6 +50,8 @@
 @media screen and (max-width: 834px) and (max-height: 1022px) {
   .home-card-about-me {
     width: 350px;
-    margin-left: 8%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
   }
 }
