--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,4 @@
-.home {
+.home-tab {
   overflow: hidden;
 }
 
@@ -55,7 +55,6 @@
   text-align: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   height: 400px;
-  /* border-bottom: 2px solid #daca23; */
 }
 
 .banner-technologies {
@@ -84,6 +83,22 @@
   color:var( --yellow-one);
 }
 
+.home-tab .secound-banner{
+  background-image: url("./HomeImages/home-picture-7.jpg");
+  background-size: cover;
+  background-position: right;
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  padding-left: 80px;
+  align-items: center;
+}
+
+.home-tab .secound-banner .card{
+  background-color: #272727;
+  max-width: 600px;
+  padding: 100px;
+}
 
 .home-btn {
   background-color:var( --yellow-one) !important;
