--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,7 +4,7 @@
   padding: 30px 0;
   width: 100%;
   position: relative;
-  height: 250px;
+  height: 300px;
 }
 
 .footer-container {
@@ -15,6 +15,15 @@
   margin: 0 auto;
   padding: 20px;
   border-top: 2px solid #3a3a3a;
+}
+
+.footer-quote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  font-size: 14px;
+  font-style: italic;
 }
 
 .contact-info p,
@@ -92,7 +101,12 @@
   }
 
   .footer {
-    height: 400px;
+    height: 500px;
     width: 100%;
+  }
+
+  .footer-quote{
+    width: 80%;
+    margin-left: 2%;
   }
 }
