--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -6,18 +6,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding: 150px; */
-  padding-top: 80px;
+  padding-top: 60px;
   background-image: url("background-about-me.jpg");
   background-size: cover;
   background-position: center;
-  height: 170px;
+  height: 200px;
+  color: white;
 }
 
+.about-me-container div{
+  font-size: 14px;
+}
 .about-me-title {
   text-align: center;
-  margin-bottom: 60px;
-  color: white;
+  margin-bottom: 20px;
 }
 
 .card-container {
