--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -14,7 +14,7 @@
   color: white;
 }
 
-.about-me-container div{
+.about-me-container div {
   font-size: 14px;
 }
 .about-me-title {
@@ -48,6 +48,34 @@
 .image-container > * {
   flex: 1 1 33%;
   box-sizing: border-box;
+}
+
+.journey-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;  
+  align-items: center;
+  padding: 75px;
+  background-image: url("./AboutMeImages/backgorund2.jpg");
+  background-size: cover;
+  flex-wrap: wrap;
+}
+
+.journey-card {
+  min-width: 300px;
+  max-width: 500px;
+  padding: 10px;
+  text-align: center;
+}
+
+.journey-card h2 {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.journey-card div {
+  font-size: 14px;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 768px) {
