--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -2,14 +2,20 @@
   font-family: "DM Sans", sans-serif !important;
 }
 
+.about-me-tab{
+  background-image: url("../Home/HomeImages/background4.png");
+  background-size: cover;
+  background-position: center;
+}
+
 .about-me-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
-  background-image: url("background-about-me.jpg");
+  /* background-image: url("../Home/HomeImages/background4.png");
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   height: 200px;
   color: white;
 }
@@ -41,7 +47,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  background-image: url("background-about-me.jpg");
+  background-image: url("../Home/HomeImages/background4.png");
   padding-bottom: 60px;
 }
 
@@ -55,10 +61,13 @@
   flex-direction: row;
   justify-content: center;  
   align-items: center;
-  padding: 75px;
+  padding: 40px 1px;
   background-image: url("./AboutMeImages/backgorund2.jpg");
   background-size: cover;
+  opacity: 0.9;
+  border-radius: 10px;
   flex-wrap: wrap;
+  margin: 10px 150px 160px
 }
 
 .journey-card {
