--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,7 @@
 .footer {
-  background-color: #292323;
+  background-image: url("../Home/HomeImages/background4.png");
+  background-size: cover;
+  background-position: center;
   color: #fff;
   padding: 30px 0;
   width: 100%;
@@ -24,6 +26,12 @@
   padding-bottom: 20px;
   font-size: 14px;
   font-style: italic;
+}
+
+.footer-quote div {
+  border-top: solid 1px var(--yellow-one);
+  padding: 5px;
+  border-radius: 10px;
 }
 
 .contact-info p,
@@ -105,7 +113,7 @@
     width: 100%;
   }
 
-  .footer-quote{
+  .footer-quote {
     width: 80%;
     margin-left: 2%;
   }
