--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,8 +1,7 @@
 .navbar {
   background-color: #f5f5f5;
-  padding: 10px 20px;
   transition: transform 0.8s ease;
-  height: 90px;
+  height: 75px;
 }
 
 .navbar-slide-up {
@@ -14,27 +13,26 @@
 }
 
 .navbar-container {
-  margin-left: 5px;
-  margin-right: 15px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .logo-image {
   width: auto;
   margin-top: 2px;
   height: 75px;
-  margin-left: 55px;
+  margin-left: 5vw;
 }
 
 .navbar-links {
   display: flex;
   align-items: center;
-  margin-right: 150px;
+  margin-left: 40vw;
 }
+
 .nav-link {
-  margin-right: 20px;
+  margin-right: 30px;
   text-decoration: none;
   color: #333333;
   font-weight: bold;
@@ -45,6 +43,7 @@
 .nav-link:hover {
   border-bottom-color: var(--yellow-one);
   transform: scale(1.1);
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 834px) and (max-height: 1022px) {
