--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,6 @@ Black: #000000
 }
 
 body {
-  background-color: rgb(192, 192, 191);
+  background-image: url("./Components/Home/HomeImages/home-picture-7.jpg");
+  background-size: cover;
 }
