--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   --light-grey: #cccccc;
   --dark-grey: #333333;
   --black: #000000;
-  --light-blue: #0066cc;
+  --light-blue: #00c5cc;
+  --deep-blue: #003366;
+  --teal:#008080;
 }
 
 /* Yellow: #FFD700 (Gold)
