--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -109,8 +109,9 @@
 
 .home-tab .secound-banner .card .up-title {
   text-transform: uppercase;
-  color: var(--yellow-one);
+  color: var(--light-blue);
   font-size: 14px;
+  font-weight: 200;
   margin-bottom: 5px;
 }
 
@@ -167,7 +168,7 @@
 }
 
 .custom-tick-icon path:first-child {
-  stroke: var( --yellow-one); 
+  stroke: var(--yellow-one);
   fill: none;
 }
 
