--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -28,7 +28,7 @@
 .navbar-links {
   display: flex;
   align-items: center;
-  margin-left: 40vw;
+  margin-right: 80px;
 }
 
 .nav-link {
@@ -46,11 +46,52 @@
   border-radius: 10px;
 }
 
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 1100; 
+}
+
+.hamburger-menu .line {
+  width: 100%;
+  height: 3px;
+  background: black;
+}
+
 @media screen and (max-width: 834px) and (max-height: 1022px) {
+
+  .navbar{
+    z-index: 1000;
+    position: fixed;
+    width: 100%;
+    margin-bottom: 20px;
+    top: 0;
+  }
   .navbar-links {
     display: none;
+    flex-direction: column;
+    gap: 1rem;
+    background: white;
+    position: fixed;
+    top: 75px;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1100;
+    top: 75px;
   }
-  .logo-image {
-    margin-left: 2px;
+
+  .navbar-links.active {
+    display: flex;
+  }
+
+  .hamburger-menu {
+    display: flex;
+    margin-right: 20px; 
   }
 }
