--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -184,7 +184,7 @@
   }
 
   .banner {
-    height: 500px;
+    height: 650px;
     overflow: hidden;
   }
 
@@ -213,8 +213,13 @@
   }
 
   .home-tab .secound-banner {
-    height: 1300px;
+    height: 1400px;
     font-size: 12px;
     align-content: strech;
+ }
+
+ .home-tab .secound-banner .card{
+  height: 700px;
+  border-radius: 1px;
  }
 }
