--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -25,9 +25,13 @@
 }
 .about-me-title {
   text-align: center;
-  margin-bottom: 20px;
   text-transform: uppercase;
-  color: var(--yellow-one);
+  color: white;
+}
+
+.underline-image {
+  width: 180px;
+  margin-bottom: 20px;
 }
 
 .card-container {
@@ -70,6 +74,7 @@
   border-radius: 10px;
   flex-wrap: wrap;
   margin: 10px 150px 160px;
+  border-bottom: 4px var(--teal) solid;
 }
 
 .journey-card {
