--- a/src/Components/InformationCard/InformationCard.css
+++ b/src/Components/InformationCard/InformationCard.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   text-align: center;
   box-sizing: border-box;
-  margin: 10px;
+  margin: 10px 10px 20px 10px;
   position: relative;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
