--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -1,5 +1,3 @@
-
-
 .about-me-tab {
   background-image: url("../Home/HomeImages/background4.png");
   background-size: cover;
@@ -8,14 +6,13 @@
 
 .about-me-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  padding-top: 60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #35353596;
-  /* background-image: url("../Home/HomeImages/background4.png");
-  background-size: cover;
-  background-position: center; */
-  height: 220px;
+  height: 400px;
   color: white;
 }
 
@@ -23,15 +20,9 @@
   font-size: 14px;
 }
 .about-me-title {
-  text-align: center;
   color: white;
   margin-bottom: 20px;
 }
-
-/* .underline-image {
-  width: 180px;
-  margin-bottom: 20px;
-} */
 
 .card-container {
   display: flex;
@@ -51,9 +42,7 @@
 .image-container {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  background-image: url("../Home/HomeImages/background4.png");
-  padding-bottom: 60px;
+  width: 40%;
 }
 
 .image-container > * {
@@ -106,6 +95,20 @@
 .arrow {
   width: 50px;
   margin: 25px;
+}
+
+.about-me-presentation {
+  text-align: center;
+}
+
+.message-container {
+  height: 600px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
 @media (max-width: 768px) {
