--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -42,18 +42,19 @@
   background-size: cover;
   background-position: center;
   color: white;
-  padding: 100px;
+  padding: 120px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.home-card {
+.project-card {
   width: 100%;
   max-width: 100% !important;
   height: 300px !important;
   margin-bottom: 5px;
+  border-bottom: solid 1px var(--dark-blue);
 }
 
 .my-work-card-container {
