--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -50,11 +50,47 @@
 }
 
 .project-card {
-  width: 100%;
-  max-width: 100% !important;
   height: 300px !important;
   margin-bottom: 5px;
   border-bottom: solid 1px var(--dark-blue);
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+}
+
+.project-card-image {
+  max-width: 50%;
+  min-width: 50%;
+  object-fit: cover;
+  height: 100%;
+}
+
+.card-action-area {
+  display: flex;
+}
+
+.project-card-title {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.project-card-field {
+  margin-bottom: 5px;
+}
+
+.project-card-field strong {
+  font-weight: bold;
+  color: #333;
+}
+
+.project-card-image {
+  width: 45%;
+  object-fit: cover;
+}
+
+.project-card-content {
+  flex: 1; /* Allows the content section to take the remaining space */
 }
 
 .my-work-card-container {
