--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -69,6 +69,10 @@
   display: flex;
 }
 
+.css-46bh2p-MuiCardContent-root{
+  min-width: 55% !important;
+}
+
 .project-card-title {
   text-transform: uppercase;
   font-size: 1rem;
