--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -94,7 +94,7 @@
 }
 
 .project-card-content {
-  flex: 1; /* Allows the content section to take the remaining space */
+  flex: 1; 
 }
 
 .my-work-card-container {
