--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -69,7 +69,7 @@
   display: flex;
 }
 
-.css-46bh2p-MuiCardContent-root{
+.css-46bh2p-MuiCardContent-root {
   min-width: 55% !important;
 }
 
@@ -94,7 +94,7 @@
 }
 
 .project-card-content {
-  flex: 1; 
+  flex: 1;
 }
 
 .my-work-card-container {
@@ -129,5 +129,9 @@
 
   .my-work-tab {
     margin-top: 80px;
+  }
+
+  .project-card {
+    height: auto !important;
   }
 }
