--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -11,14 +11,13 @@
 }
 
 .image-with-text-overlay:hover {
-  transform: scale(1.03);
+  /* transform: scale(1.01); */
 }
 
 .background-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.9;
 }
 
 .text-overlay {
@@ -36,7 +35,6 @@
   margin-bottom: 20px;
   border-bottom: 3px solid transparent;
   transition: border-color 0.3s ease;
-  border-bottom-color: var(--yellow-one);
 }
 
 .picture-overlay {
@@ -173,6 +171,15 @@
   fill: none;
 }
 
+.rounded-picture-right {
+  position: absolute;
+  top: 10%;
+  transform: translateY(-50%);
+  width: 150px;
+  height: 200px;
+  border: 2px solid #ccc;
+  object-fit: cover;
+}
 @media screen and (max-width: 834px) and (max-height: 1022px) {
   .text-overlay h2 {
     color: white;
