--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -7,34 +7,52 @@
   width: 100%;
   height: 450px;
   overflow: hidden;
-  transition: transform 0.5s ease;
-}
-
-.image-with-text-overlay:hover {
-  /* transform: scale(1.01); */
-}
-
-.background-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  background-image: url("./HomeImages/secound-pic.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-right: 20px;
 }
 
 .text-overlay {
   position: absolute;
-  top: 40%;
-  left: 12%;
-  transform: translate(-50%, -50%);
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
   color: white;
+  text-align: right;
+  margin-right: 80px;
 }
 
 .text-overlay h2 {
   color: white;
   font-size: 1.6rem;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border-bottom: 3px solid transparent;
   transition: border-color 0.3s ease;
+}
+
+.image-container-home {
+  position: absolute;
+  right: 80px;
+  top: -10px;
+}
+
+.rounded-picture-right {
+  width: 120px;
+  height: 150px;
+  object-fit: cover;
+  border: 1px solid #ccc;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .picture-overlay {
@@ -171,15 +189,6 @@
   fill: none;
 }
 
-.rounded-picture-right {
-  position: absolute;
-  top: 10%;
-  transform: translateY(-50%);
-  width: 150px;
-  height: 200px;
-  border: 2px solid #ccc;
-  object-fit: cover;
-}
 @media screen and (max-width: 834px) and (max-height: 1022px) {
   .text-overlay h2 {
     color: white;
